--- a/com.vogella.spring.jpa/.classpath
+++ b/com.vogella.spring.jpa/.classpath
@@ -7,7 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src/main/resources">
 		<attributes>
-			<attribute name="FROM_GRADLE_MODEL" value="true"/>
+			<attribute name="FROM_GRADLE_MODEL" value="false"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src/test/java">
